B-F Backup Sandbox 30.4.12/src/objects/Product_Launch_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Week__c</fullName>
        <description>Formula to calculate the week number based on date entered</description>
        <formula>Case( 
MOD( DATE(YEAR(Calender_Week__c), 1, 1) - DATE (1900, 1, 7), 7),
0, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 3) /7,
1, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 4) /7,
2, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 5) /7,
3, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 6) /7,
4, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 7) /7,
5, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 1) /7,
6, ( Calender_Week__c- DATE(YEAR(Calender_Week__c),1,1) + 2) /7,
99)</formula>
        <label>Calendar Week #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calender_Week__c</fullName>
        <description>Calender Week - Are We going to do this via Apex?</description>
        <label>Calender Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag will be used to indicate the survey has been completed by the Sales Rep - Unchecked values will be included in the Offline and indicate a new Survey available for Sales Rep to complete.</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <label>Placement</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Launch__c</fullName>
        <label>Product Launch</label>
        <referenceTo>Product_Launch__c</referenceTo>
        <relationshipLabel>Product Launch Details</relationshipLabel>
        <relationshipName>Product_Launch_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Product_Launch__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Price__c</fullName>
        <label>Promotion Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shelf__c</fullName>
        <label>Shelf</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Main_Segement__c</fullName>
        <label>Store Main Segement</label>
        <picklist>
            <picklistValues>
                <fullName>1st Segment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2nd Segment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd  Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store_Sub_Segement__c</fullName>
        <label>Store Sub-Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Christmas Promotion Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punch Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Header (Display)  - Spirit Dept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Header (Shelf)  - Spirit Dept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Header (Display)  - Promo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf Header (Shelf)  - Promo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <label>Week</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Goal__c</fullName>
        <formula>Volume__c / Product_Launch__r.Estimated_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Product Launch Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLD-{0}</displayFormat>
        <label>Product Launch Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Launch Details</pluralLabel>
    <recordTypes>
        <fullName>Germany_Off</fullName>
        <active>true</active>
        <description>Product Launch Detail For Germany</description>
        <label>Germany Off</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>